<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextAlbumName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nombre" />

    <EditText
        android:id="@+id/editTextAlbumCover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="URL de portada" />

    <EditText
        android:id="@+id/editTextAlbumReleaseDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Fecha de lanzamiento (YYYY-MM-DD)" />

    <EditText
        android:id="@+id/editTextAlbumDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Descripción" />

    <Spinner
        android:id="@+id/spinnerAlbumGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/genres" />

    <Spinner
        android:id="@+id/spinnerAlbumRecordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/recordLabels" />
</LinearLayout>