...

                <Button
                    android:id="@+id/post_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Crear" />

            </LinearLayout>

            <!-- Sección de Comments -->
            <TextView
                android:id="@+id/textViewCommentsTitle"
...
