<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.CollectorListFragment"
    android:layout_marginStart="16dp"
    android:paddingTop="72dp"
    android:layout_marginEnd="16dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collectorRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/collector_item" />
</FrameLayout>