...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{collector.name}"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"/>
...
